# tesserae2

./: .bumpversion.cfg  .coveragerc  .coveralls.yml  .dockerignore  .gitignore  .gitmodules  .isort.cfg  .landscape.yml  .pylintrc  .readthedocs.yml  .travis.yml  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  TODO.md  codecov.yml  dev-requirements.txt  env-build.yml  env.yml  environment  environment.lock.yml  environment.yml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox-requirements.txt  tox.ini
.github/workflows/: tesserae-lint.yml  tesserae.yml
cortexpy/graph/: builder.py  colored_de_bruijn.py  traversal_engine.py
doc/: conf.py  index.rst  usage.rst
docs/: Makefile  api.rst  conf.py  index.rst  install.rst  main.rst  requirements.txt  tutorial.rst  usage.rst
docs/src/: tesserae.command.rst  tesserae.rst
pycortex/: cortex_graph.py  graph_parser.py
pycortex/command/: show.py
pycortex/commands/: print_.py
scripts/: bootstrap
src/: tesserae.py
src/cortexpy/: tesserae.py
src/tesserae/: __init__.py  __main__.py  cli.py  cpp_algorithm.pxd  hmm.pyx  log.py  model.py  nucleotide_sequence.py  output.py  profmodel.py  sequence.py  tesserae.py  utils.py
tests/: conftest.py  util.py
tests/acceptance/: test_cli.py  test_tesserae.py
tests/resources/: constant_regions.fasta  degron_test_read.fasta  degron_test_target.fasta  integration_test_expected_output.bam  integration_test_expected_output.sam  minimum_target_list.fasta  query.fasta  queryNoFlank.fasta  query_sequence.fasta  (+4 more)
(+45 files in other folders)
