[metadata]
name = tesserae
version = attr: tesserae.__version__
description = Fast, multi reference, mosaic aligner based on a pair hidden markov model.
long_description = file: README.rst
author = Lucas van Dijk, Warren W. Kretzschmar, Kiran Garimella
author_email = lvandijk@broadinstitute.org
keywords = bioinformatics, sequence alignment
license = BSD 3-Clause License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD 3-Clause License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Cython

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:

build_requires =
    cython
    oldest-supported-numpy

install_requires =
    numpy
    scipy<1.9
    scikit-bio
    pysam
    tomli; python_version<"3.11"

tests_require =
    coverage
    pytest

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tesserae = tesserae.__main__:tesserae_cli

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-pysam.*]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True
